--- a/00-HTML-CSS-basics/0.2.5-Diseno/css/grid.css
+++ b/00-HTML-CSS-basics/0.2.5-Diseno/css/grid.css
@@ -1,13 +1,13 @@
-.container {
+/* .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 
-  /* grid-template-columns: repeat(auto-fill, minmax(200px,1fr)); */
+  /* grid-template-columns: repeat(auto-fill, minmax(200px,1fr)); 
   grid-gap: 20px;
   grid-auto-rows: minmax(100px, auto);
-  gap: 15px;
-}
-
+  gap: 20px;
+} */
+/* 
 .container2 {
   display: grid;
 }
@@ -24,14 +24,14 @@
 .header3 {
   grid-column: 2/3;
   grid-row: 1;
-}
+} */
 
 /* header {
 
   grid-column: 1/3;
   grid-row: 1;
 } */
-
+/* 
 article {
 
   grid-column: 2;
@@ -49,33 +49,125 @@ footer {
   grid-column: 1/3;
   grid-row: 3;
 }
+ */
+.container {
+  /*  margin: 0 auto; */
+  /* max-width: 48rem; */
+  width: 100%;
+  clear: both;
+  display: block;
+  float: left;
+  padding: 8px;
+}
 
-/* .container {
-  margin: 0 auto;
-  max-width: 48rem;
-  width: 90%;
-} */
-/* 
+body {
+  background-color: #a6a6a6;
+}
+
 *,
 *::before,
 *::after {
+  padding: 0;
+  margin: 0;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
+.container img {
+  width: 100%;
+  height: auto;
+  position: relative;
+  float: left;
+}
 
-@media (min-width: 40rem) {
+.container a {
+  display: block;
+}
+
+.container.columns {
+  margin-right: 0;
+}
+
+
+@media (max-width: 40rem) {
   .column {
     float: left;
-    padding-left: 1rem;
-    padding-right: 1rem;
+  }
+
+  .column.third {
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.3);
+    width: -ms-calc(100% - 16px);
+    width: -moz-calc(100% - 16px);
+    width: -webkit-calc(100% - 16px);
+    width: calc(100% - 16px);
+    margin: 8px;
+    height: auto;
+    position: relative;
+    float: left;
+  }
+
+  p {
+    font-size: 5vw;
+    padding: 5%;
+  }
+  
+  h1{
+    display: none;
   }
 }
 
 @media (min-width: 40rem) {
   .column.flow-opposite {
     float: right;
+  }
+
+  .column.third {
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.3);
+    width: -ms-calc(50% - 16px);
+    width: -moz-calc(50% - 16px);
+    width: -webkit-calc(50% - 16px);
+    width: calc(50% - 16px);
+    margin: 8px;
+    height: auto;
+    position: relative;
+    float: left;
+    /* width: 33.3%;
+    height: auto;
+    position: relative;
+    float: left; */
+  }
+
+  p {
+    font-size: 3vw;
+    padding: 5%;
+  }
+}
+
+@media (min-width: 60rem) {
+  .column.flow-opposite {
+    float: right;
+  }
+
+  .column.third {
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.3);
+    width: -ms-calc(33.3333% - 16px);
+    width: -moz-calc(33.3333% - 16px);
+    width: -webkit-calc(33.3333% - 16px);
+    width: calc(33.3333% - 16px);
+    margin: 8px;
+    height: auto;
+    position: relative;
+    float: left;
+    /* width: 33.3%;
+    height: auto;
+    position: relative;
+    float: left; */
+  }
+
+  p {
+    font-size: 2vw;
+    padding: 5%;
   }
 }
 
@@ -91,16 +183,14 @@ footer {
   width: 50%;
 }
 
-.column.third {
-  width: 33.3%;
-}
+
 
 .column.fourth {
   width: 25%;
 }
 
 
-
+/* 
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -113,4 +203,48 @@ footer {
 
 .clearfix {
   *zoom: 1;
+} */
+
+.screen {
+  background-color: rgba(255, 255, 255, 0.5);
+  left: 0;
+  top: 0;
+  border-radius: 0;
+  height: 30%;
+  width: 100%;
+  position: absolute;
+  opacity: 0;
+  z-index: 1000;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+.column.third:hover .screen {
+  opacity: 1
+}
+
+.title {
+  color: #000000;
+  font-family: arial, helvetica, sans-serif;
+  font-weight: bold;
+  -webkit-transition: all 0.5s ease-in-out;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -ms-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  /* padding-left: 1rem;
+    padding-right: 1rem; */
+  margin-left: -30px;
+}
+
+.column.third:hover .title {
+  margin-left: 0;
+}
+
+/* p {
+  font-size: 2vw;
+  padding: 5%;
 } */
