--- a/00-HTML-CSS-basics/0.2.5-Diseno/css/grid.css
+++ b/00-HTML-CSS-basics/0.2.5-Diseno/css/grid.css
@@ -105,6 +105,8 @@ body {
     height: auto;
     position: relative;
     float: left;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
   }
 
   p {
@@ -132,6 +134,8 @@ body {
     height: auto;
     position: relative;
     float: left;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
     /* width: 33.3%;
     height: auto;
     position: relative;
@@ -209,7 +213,7 @@ body {
 
 .screen {
   background-color: rgba(255, 255, 255, 0.5);
-  left: 0;
+  left: 10;
   top: 0;
   border-radius: 0;
   height: 30%;
